# hyp

./: .gitattributes  Cargo.toml  README.md
.cursor/rules/: poin.mdc
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml
benches/: hyperbolic.rs
examples/: README.md  distortion_vs_dimension.rs  graph_diagnostics.rs  hierarchy_recovery.rs  lorentz_basics.rs  lorentz_sgd.rs  poincare_basics.rs  poincare_sgd.rs  taxonomy_embedding.rs  tree_embedding.rs
src/: core.rs  lib.rs  lorentz.rs
tests/: numerical_stability.rs  property_tests.proptest-regressions  property_tests.rs
