[package]
name = "hyp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arc <attobop@gmail.com>"]
description = "Hyperbolic geometry: Poincare ball, Lorentz model, Mobius operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/hyp"
documentation = "https://docs.rs/hyp"
keywords = ["hyperbolic", "poincare", "lorentz", "embeddings", "geometry"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
thiserror = "2.0"
innr = { path = "../innr", optional = true }

[dev-dependencies]
approx = "0.5"
proptest = "1.5"
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
simd = ["dep:innr"]

[[bench]]
name = "hyperbolic"
harness = false

